--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
   </head>
   <body ng-controller="HomeController">
-    <h1>{{message}}</h1>
+    <h1>Hello from HomeController!</h1>
     <script src="app.js"></script>
   </body>
 </html>
