--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!--<!doctype html>
 <html ng-app="myApp">
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
@@ -9,7 +9,8 @@
   </body>
 </html>
 
-<!--
+-->
+
 <!doctype html>
 <html ng-app="myApp">
   <head>
@@ -39,5 +40,3 @@
     <script src="app.js"></script>
   </body>
 </html>
-
--->
